--- a/contact.html
+++ b/contact.html
@@ -1,70 +1,134 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>index</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<html lang="en-us">
+  <head>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <title>Bootstrap Basic Portfolio</title>
+
+    <!-- Boostrap Stylesheet -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" media="screen">
+
+    <!-- Our own CSS stylesheet -->
+    <link rel="stylesheet" href="assets/css/styles.css" media="screen">
+
+  </head>
+
+  <body>
+
+    <!-- Start of navbar -->
+    <nav class="navbar navbar-default">
+      <div class="container-fluid navbar-custom">
+
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#" id="logo">Michael C. Dion Jr.</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right navbar-right-custom">
+            <li><a href="contact.html">Contact</a></li><span class="pipe"></span>
+            <li><a href="portfolio.html">Portfolio</a></li><span class="pipe"></span>
+            <li><a href="index.html">About</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+    <!-- End of navbar -->
+
+    <!-- Start of content wrap -->
+    <div class="wrap">
+      <div class="container">
+        <section class="row">
+          <div class="col-md-8">
+<!--             <form class="contact-form">
+              <h1 class="contact-form-header">Contact</h1>
+              <hr class="contact-hr"/>
+              <div class="form-group">
+                <label class="label-name" for="name">Name</label>
+                <input type="text" id="name_input" name="user_name" />
+              </div>
+              <div class="form-group">
+                <label class="label-mail" for="mail">E-mail</label>
+                <input type="email" id="mail_input" name="user_mail" />
+              </div>
+              <div class="form-group">
+                <label class="label-msg" for="msg">Message</label><br />
+                <textarea id="msg" name="user_message_input" cols=600></textarea>
+              </div>
+              <button class="submit-btn">Submit</button>
+            </form> -->
+
+            <form action="mailto:michael.c.dion@gmail.com.com" method="post" enctype="text/plain">
+            	<h1 class="contact-form-header">Contact</h1>
+
+            	<div class="form-group">
+					<label class="label-name" for="name">Name</label><br>
+					<input type="text" id="name_input" name="name"><br>
+				</div>
+				
+				<div class="form-group">
+					<label class="label-mail" for="mail">E-mail</label><br>
+					<input type="text" id="mail_input" name="mail"><br>
+				</div>
+
+				<div class="form-group">
+					 <label class="label-msg" for="msg">Message</label><br>
+					<input type="text" id="msg" name="comment" size="100"><br><br>
+				</div>
+
+				<input type="submit" value="Send">
+			</form>
 
 
-</head>
-<body>
 
-	<div class="container">
-		<div class="row">
+          </div>
+          <div class="col-md-4">
 
-			<div id="nav_bar" class="col-lg-12">
+            <!-- Start of Connect With Me Area -->
+            <section id="connect-with-me-area">
+              <div class="connect-with-me-content">
+                <h1 class="connect-with-me-header">Connect With Me</h1>
+                <hr />
+                <div id="images">
+                  <img src="assets/imgs/github.png" alt="" class="connect-with-me-photo">
+                  <img src="assets/imgs/linkedin.png" alt="" class="connect-with-me-photo">
+                  <img src="assets/imgs/stackover2.png" alt="" class="connect-with-me-photo">
+                </div>
+              </div>
+            </section>
 
-				<nav class="navbar navbar-default">
-				  <div class="container-fluid">
-				    <!-- Brand and toggle get grouped for better mobile display -->
-				    <div class="navbar-header">
-				      <a class="navbar-brand" href="#">Chris Dion</a>
-				    </div>
-				    
-				    <ul class="nav navbar-nav navbar-right">
-				      <li><a href="index.html">About</a></li>
-				      <li><a href="portfolio.html">Portfolio</a></li>
-				      <li><a href="contact.html">Contact</a></li>
-				    </ul>
+            <!-- End of the Connect With Me Area -->
+          </div>
+        </section>
+      </div>
+    </div>
+    <!-- End of content wrap -->
 
-				  </div><!-- /.container-fluid -->
-				</nav>
+    <!-- Start of footer -->
+    <footer class="footer">
+      <div class="two-toned-footer-color"></div>
+      <p class="text-muted text-muted-footer text-center">
+        &copy; Copyright 2017 Michael C. Dion Jr.
+      </p>
+    </footer>
+    <!-- End of footer -->
 
-			</div>
-			
-		</div>
+    <!-- jQuery CDN -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-		<div class="row">
-			<div id="email_form" class="col-lg-4">
-				<h2 class="blue_font">Contact me</h2>
-				<form>
-				  <div class="form-group">
-				    <label for="email">Email address:</label>
-				    <input type="email" class="form-control" id="email">
-				  </div>
-				  <div class="form-group">
-				    <label for="pwd">Password:</label>
-				    <input type="password" class="form-control" id="pwd">
-				  </div>
-				  <button type="submit" class="btn btn-default">Submit</button>
-				</form>
-			</div>
+    <!-- Bootstrap CDN -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-			<div class="col-lg-3"></div>
-			
-			<div id="connect_me" class="col-lg-4">
-				<h2 class="blue_font">Connect with Me</h2><hr>
-				<a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-	        	<a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-	        	<a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
-			</div>
-		</div>
-	</div>
+  </body>
 
-  	<footer>
-    	<div class="container">Copyright &copy; 2017 Chris Dion</div>
-  	</footer>
-
-</body>
 </html>
