--- a/index.html
+++ b/index.html
@@ -1,67 +1,102 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>index</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<html lang="en-us">
+  <head>
 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-</head>
-<body>
-	<div class="container">
-		<div class="row">
+    <title>Michael C. Dion Portfolio</title>
 
-			<div id="nav_bar" class="col-lg-12">
+    <!-- Boostrap Stylesheet -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" media="screen">
 
-				<nav class="navbar navbar-default">
-				  <div class="container-fluid">
-				    <!-- Brand and toggle get grouped for better mobile display -->
-				    <div class="navbar-header">
-				      <a class="navbar-brand" href="#">Chris Dion</a>
-				    </div>
-				    
-				    <ul class="nav navbar-nav navbar-right">
-				      <li><a href="index.html">About</a></li>
-				      <li><a href="portfolio.html">Portfolio</a></li>
-				      <li><a href="contact.html">Contact</a></li>
-				    </ul>
+    <!-- Our own CSS stylesheet -->
+    <link rel="stylesheet" href="assets/css/styles.css" media="screen">
 
-				  </div><!-- /.container-fluid -->
-				</nav>
+  </head>
 
-			</div>
-			
-		</div>
+  <body>
+    <!-- Start of navbar -->
+    <nav class="navbar navbar-default">
+      <div class="container-fluid navbar-custom">
 
-		<div class="row">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="row">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <div class="col-xs-12 phone-nav">
+              <a class="navbar-brand" href="#" id="logo">Michael C. Dion Jr.</a>
+            </div>
+          </div>
 
-			<div class="col-lg-1"></div>	
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right navbar-right-custom">
+              <li><a href="contact.html">Contact</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="index.html">About</a></li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div>
+      </div><!-- /.container-fluid -->
+    </nav>
+    <!-- End of navbar -->
 
-			<div id="about_me" class="col-lg-5">	
-			     <h1 class="blue_font">About Me</h1>
+    <!-- Start of content wrap -->
+    <div class="wrap">
+      <div class="container">
+        <section class="row">
+          <div class="col-md-8">
+            <article class="about-me-content">
+              <h1 class="about-me-header">About Me</h1>
+              <hr class="about-me-hr"/>
+              <img src="assets/imgs/natebeach.jpeg" alt="" id="nate-image"/>
+              <p>For as long as I can remember I have always had a passion for technology. That passion has lead me to teach myself basic programming, graduating college with a computer science degree, and now pursuing a carrer in the software industry.</p>
+              <br />
+            </article>
+          </div>
+          <div class="col-md-4">
 
-			     <img id="cat" src="assets/images/cat.jpg">
+            <!-- Start of Connect With Me Area -->
+            <section id="connect-with-me-area">
+              <div class="connect-with-me-content">
+                <h1 class="connect-with-me-header">Connect With Me</h1>
+                <hr />
+                <div id="images">
+                  <img src="assets/imgs/github.png" alt="" class="connect-with-me-photo">
+                  <img src="assets/imgs/linkedin.png" alt="" class="connect-with-me-photo">
+                  <img src="assets/imgs/stackover2.png" alt="" class="connect-with-me-photo">
+                </div>
+              </div>
+            </section>
+            <!-- End of the Connect With Me Area -->
 
-			     <p>Marshmallow jelly souffl&eacute; pastry biscuit gummi bears tootsie roll tootsie roll gingerbread. Cotton candy muffin gingerbread fruitcake. Sweet roll souffl&eacute; topping wafer croissant oat cake gummi&nbsp;bears.</p>
+          </div>
+        </section>
+      </div>
+    </div>
+    <!-- End of content wrap -->
 
-			     <p>Jelly-o cheesecake dessert fruitcake ice cream brownie liquorice souffl&eacute;. Caramels biscuit gummi bears tiramisu chupa chups. Croissant macaroon cotton candy cake pudding.</p>
-			</div>
+    <!-- Start of footer -->
+    <footer class="footer">
+      <div class="two-toned-footer-color"></div>
+      <p class="text-muted text-muted-footer text-center">
+        &copy; Copyright 2017 Michael C. Dion Jr.
+      </p>
+    </footer>
+    <!-- End of footer -->
 
-			<div class="col-lg-1"></div>	
-			
-			<div id="connect_me" class="col-lg-4">
-				<h2 class="blue_font">Connect with Me</h2><hr>
-				<a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-	        	<a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-	        	<a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
-			</div>
-		</div>
-	</div>\
+    <!-- jQuery CDN -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-  	<footer>
-    	<div class="container">Copyright &copy; 2017 Chris Dion</div>
-  	</footer>
+    <!-- Bootstrap CDN -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  </body>
 
-</body>
 </html>
