--- a/portfolio.html
+++ b/portfolio.html
@@ -1,87 +1,106 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>index</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<html lang="en-us">
 
+  <head>
 
-</head>
-<body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-	<div class="container">
-		<div class="row">
+    <title>Bootstrap Basic Portfolio</title>
 
-			<div id="nav_bar" class="col-lg-12">
+    <!-- Boostrap Stylesheet -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" media="screen">
 
-				<nav class="navbar navbar-default">
-				  <div class="container-fluid">
-				    <!-- Brand and toggle get grouped for better mobile display -->
-				    <div class="navbar-header">
-				      <a class="navbar-brand" href="#">Chris Dion</a>
-				    </div>
-				    
-				    <ul class="nav navbar-nav navbar-right">
-				      <li><a href="index.html">About</a></li>
-				      <li><a href="portfolio.html">Portfolio</a></li>
-				      <li><a href="contact.html">Contact</a></li>
-				    </ul>
+    <!-- Our own CSS stylesheet -->
+    <link rel="stylesheet" href="assets/css/styles.css" media="screen">
 
-				  </div><!-- /.container-fluid -->
-				</nav>
+  </head>
 
-			</div>
-			
-		</div>
+  <body>
+    <!-- Start of navbar -->
+    <nav class="navbar navbar-default">
+      <div class="container-fluid navbar-custom">
 
-		<div class="row">
-			<div id="portfolio" class="col-lg-6">	
-			     <h1 class="blue_font">Portfolio</h1>
-				 <div class="row">
-				 		<div class="col-lg-6">
-					 		<img id="hangman_css" src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
-		       				 <h3>Hangman</h3>
-				 		</div>
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="row">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <div class="col-xs-12 phone-nav">
+              <a class="navbar-brand" href="#" id="logo">Michael C. Dion Jr.</a>
+            </div>
+          </div>
 
-				 		<div class="col-lg-6">
-					        <img id="rpg_css" src="assets/images/technics-q-c-640-480-2.jpg" alt="rpg game">
-					        <h3>RPG Game</h3>
-				 		</div>
-				 </div>
-				 <div class="row">
-				 		<div class="col-lg-6">
-				 			<img id="trivia_css" src="assets/images/technics-q-c-640-480-5.jpg" alt="trivia">
-	        				<h3>Trivia</h3>
-				 		</div>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right navbar-right-custom">
+              <li><a href="contact.html">Contact</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="index.html">About</a></li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div>
+      </div><!-- /.container-fluid -->
+    </nav>
+    <!-- End of navbar -->
 
-				 		<div class="col-lg-6">
-					        <img id="widget_css" src="assets/images/technics-q-c-640-480-7.jpg" alt="widget">
-					        <h3>Rutger Info Widget</h3>
-				 		</div>
-				 </div>
-				 <div class="row">
-				 		<div class="col-lg-6">
-					        <img id="rps_css" src="assets/images/technics-q-c-640-480-9.jpg" alt="RPS">
-					        <h3>Rock Paper Scissors</h3>
-				 		</div>
-				 </div>
-			</div>
+    <!-- Start of content wrap -->
+    <div class="wrap">
+      <div class="container">
+        <section class="row">
+          <div class="col-md-7">
+            <section id="portfolio-area">
+              <h1 class="port-header">Portfolio</h1>
+              <hr class="port-hr"/>
+              <img class="port-imgs" src="http://lorempixel.com/223/166" alt="">
+              <img class="port-imgs" src="http://lorempixel.com/233/166" alt="">
+              <img class="port-imgs" src="http://lorempixel.com/233/166" alt="">
+              <img class="port-imgs" src="http://lorempixel.com/233/166" alt="">
+              <img class="port-imgs" src="http://lorempixel.com/233/166" alt="">
+            </section>
+          </div>
+          <div class="col-md-5">
 
-			<div class="col-lg-1"></div>
-			
-			<div id="connect_me" class="col-lg-5">
-				<h2 class="blue_font">Connect with Me</h2><hr>
-				<a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-	        	<a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-	        	<a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
-			</div>
-		</div>
-	</div>
+            <!-- Start of Connect With Me Area -->
+            <section id="connect-with-me-area">
+              <div class="connect-with-me-content">
+                <h1 class="connect-with-me-header">Connect With Me</h1>
+                <hr />
+                <div id="images">
+                  <img src="assets/imgs/github.png" alt="" class="connect-with-me-photo">
+                  <img src="assets/imgs/linkedin.png" alt="" class="connect-with-me-photo">
+                  <img src="assets/imgs/stackover2.png" alt="" class="connect-with-me-photo">
+                </div>
+              </div>
+            </section>
 
-  	<footer>
-    	<div class="container">Copyright &copy; 2017 Chris Dion</div>
-  	</footer>
+            <!-- End of the Connect With Me Area -->
+          </div>
+        </section>
+      </div>
+    </div>
+    <!-- End of content wrap -->
 
-</body>
+    <!-- Start of footer -->
+    <footer class="footer">
+      <div class="two-toned-footer-color"></div>
+      <p class="text-muted text-muted-footer text-center">
+        &copy; Copyright 2017 Michael C. Dion Jr.
+      </p>
+    </footer>
+    <!-- End of footer -->
+
+    <!-- jQuery CDN -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- Bootstrap CDN -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+  </body>
+
 </html>
