--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <article class="about-me-content">
               <h1 class="about-me-header">About Me</h1>
               <hr class="about-me-hr"/>
-              <img src="assets/imgs/natebeach.jpeg" alt="" id="nate-image"/>
+              <img src="assets/imgs/portrait.png" alt="" id="portrait-image"/>
               <p>For as long as I can remember I have always had a passion for technology. That passion has lead me to teach myself basic programming, graduating college with a computer science degree, and now pursuing a carrer in the software industry.</p>
               <br />
             </article>
