adding images to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,11 +57,24 @@
             <section id="portfolio-area">
               <h1 class="port-header">Portfolio</h1>
               <hr class="port-hr"/>
-              <img class="port-imgs" src="http://lorempixel.com/223/166" alt="">
+	
+	          <a href="dnc_index.html">
+				<img src="assets/imgs/dnc_logo.png" alt="Dine and Charge" >
+			  </a>
+
+		      <a href="hangman_index.html">
+				<img src="assets/imgs/title.png" alt="Hangman" >
+			  </a>
+
+			  <a href="trivia_index.html">
+				<img src="assets/imgs/logo.png" alt="Movie Trivia">
+			  </a>
+
+<!--               <img class="port-imgs" src="http://lorempixel.com/223/166" alt="">
               <img class="port-imgs" src="http://lorempixel.com/233/166" alt="">
               <img class="port-imgs" src="http://lorempixel.com/233/166" alt="">
               <img class="port-imgs" src="http://lorempixel.com/233/166" alt="">
-              <img class="port-imgs" src="http://lorempixel.com/233/166" alt="">
+              <img class="port-imgs" src="http://lorempixel.com/233/166" alt=""> -->
             </section>
           </div>
           <div class="col-md-5">
